--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body{
     display: grid;
     grid-template-columns: 0.5fr 3fr 0.5fr 0.5fr 1fr 0.5fr;
     grid-template-rows: 0.5fr 0.5fr 2fr 0.5fr 0.5fr;
-    gap:2px;
+    gap:10px;
+    background-color: black;
 }
 
 .yellowbox{
